--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   </head>
   <body>
     <script>
+      // data types
       let a = 23;
+      a = "Name";
+      a = false;
+      console.log("the type of a is", typeof a);
     </script>
   </body>
 </html>
