--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   </head>
   <body>
     <script>
-      // data types
-      let a = 23;
-      a = "Name";
-      a = false;
-      console.log("the type of a is", typeof a);
+      // var let const
+      var a = "bapunu";
+      var a = "bapu";
+      let a = "name";
+      a = "nome";
+      const a = "hello";
     </script>
   </body>
 </html>
