--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
   </head>
   <body>
     <script>
-      // var let const
-      var a = "bapunu";
-      var a = "bapu";
-      let a = "name";
-      a = "nome";
-      const a = "hello";
+      // ==  & ===
+      console.log(1 == "1");
+      console.log(1 === "1");
     </script>
   </body>
 </html>
