--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <script>
-      // ==  & ===
-      console.log(1 == "1");
-      console.log(1 === "1");
+      // null and undefined
+      let a = null;
+      console.log(typeof a);
     </script>
   </body>
 </html>
