--- a/index.html
+++ b/index.html
@@ -1,108 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <style>
+      #parentClick {
+        height: 200px;
+        width: 200px;
+        background-color: aquamarine;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+    </style>
+    <title>Interview</title>
   </head>
   <body>
-    <div class="card-inner">
-      <div class="preview-block">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-sm-3">
-            <div class="form-group">
-              <div class="form-control-wrap">
-                <select
-                  class="form-select js-select2 select2-hidden-accessible"
-                  data-ui="lg"
-                  id="select-Session"
-                  data-select2-id="select-Session"
-                  tabindex="-1"
-                  aria-hidden="true"
-                >
-                  <option value="default_option" data-select2-id="2">
-                    Select Session
-                  </option>
-
-                  <option value="Even (2023-24)">Even (2023-24)</option>
-                  <option value="Odd (2023-24)">Odd (2023-24)</option></select
-                ><span
-                  class="select2 select2-container select2-container--default select2-lg"
-                  dir="ltr"
-                  data-select2-id="1"
-                  style="width: 451.862px"
-                  ><span class="selection"
-                    ><span
-                      class="select2-selection select2-selection--single"
-                      role="combobox"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      tabindex="0"
-                      aria-disabled="false"
-                      aria-labelledby="select2-select-Session-container"
-                      ><span
-                        class="select2-selection__rendered"
-                        id="select2-select-Session-container"
-                        role="textbox"
-                        aria-readonly="true"
-                        title="
-                                Select Session
-                            "
-                      >
-                        Select Session </span
-                      ><span
-                        class="select2-selection__arrow"
-                        role="presentation"
-                        ><b role="presentation"></b></span></span></span
-                  ><span
-                    class="dropdown-wrapper"
-                    aria-hidden="true"
-                  ></span></span
-                ><label class="form-label-outlined" for="select-Session"
-                  >Session</label
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-sm-3">
-            <div class="form-group">
-              <div class="form-control-wrap">
-                <input
-                  type="number"
-                  class="form-control form-control-lg form-control-outlined"
-                  id="rollno"
-                  placeholder="Reg No."
-                />
-                <label class="form-label-outlined" for="rollno">
-                  Reg No.
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-2 col-sm-3">
-            <div class="form-group">
-              <div class="form-control-wrap">
-                <input
-                  type="text"
-                  id="dob"
-                  class="form-control form-control-lg date-picker-alt"
-                  data-date-format="yyyy-mm-dd"
-                />
-                <label class="form-label-outlined" for="dob"> DOB </label>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-1 col-sm-2">
-            <a href="#" class="btn btn-primary" id="btnViewStudentReseltsList"
-              >View</a
-            >
-          </div>
-          <div class="col-lg-1 col-sm-2">
-            <a href="#" class="btn btn-secondary" id="btnReset">Reset</a>
-          </div>
-        </div>
-      </div>
+    <div id="parentClick">
+      <button id="childClick">click</button>
     </div>
+
+    <script>
+      // event capturing
+      const parentID = document.getElementById("parentClick");
+      const childID = document.getElementById("childClick");
+
+      const parentClick = () => {
+        alert("parent click");
+      };
+      const childClick = () => {
+        alert("child click");
+      };
+      parentID.addEventListener("click", parentClick, true);
+      childID.addEventListener("click", childClick, true);
+    </script>
   </body>
 </html>
